prototype/styles/app.css
#content {
	padding: 5px;
	width: 100%;
}

#message {
	padding-left: 10px;
}

/* data vis container styles */
.container {
 padding: 0px;
 margin: 0px;
 width: 100%;
}

.map, .data, .graph {
	background-color: #eee;
	border: solid 1px #AACFE4;
	border-radius: 5px;
	box-shadow: 0px 0px 10px #ccc;	
	margin: 0px;	
	overflow: hidden;
}

.data {
	overflow-y: scroll;
}


/* app text elements + link styles */
.note, .label {
	font-size: .8em;	
	color: #333;
}

.date {
	font-size: 0.8em;	
}

.link {
	font-size: 0.9em;
	color: #06f;
}

.list-group-item-text {
	padding: 10px;
}

.selected {
	background-color: #ddd;
}


/* stats bar styles */
.popup-content {
	display: inline;
	width: 100%;
	font-size: 1.2em;
}

.hits {
	display: inline;
	width: 100%;
	font-size: .9em;
}

.bar {
	width: 5px;;
}


/* data color coding styles */
.red {
	color: #f00;
}

.orange {
	color: #f60;
}

.green {
	color: #0c0;
}

.blue {
	color: #06f;
}


/* graph styles */
.axis path,
.axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}

.x.axis path {
  display: none;
}

.grid .tick {
  stroke: lightgrey;
  opacity: 0.7;
}
.grid path {
  stroke-width: 0;
}

.area {
  fill: steelblue;
}

.line {
  fill: none;
  stroke: #f60;
  stroke-width: 1.5px;
}

.bar {
  fill: steelblue;
}

.bar:hover {
	fill: #f60;
}

.legend {
	padding: 5px;
	font: 10px sans-serif;
	background: yellow;
	box-shadow: 2px 2px 1px #888;
}

